# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Put both crates in a single workspace so that `trybuild` compiler errors have
# paths that are stable regardless of the path to the repository root. This
# avoids issues like:
# https://github.com/dtolnay/trybuild/issues/207#issuecomment-1312277494
[workspace]

[package]
edition = "2021"
name = "zerocopy"
version = "0.7.0-alpha.4"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Utilities for zero-copy parsing and serialization"
license = "BSD-2-Clause"
repository = "https://github.com/google/zerocopy"
rust-version = "1.65.0"

exclude = [".*"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.ci]
# The versions of the stable and nightly compiler toolchains to use in CI.
pinned-stable = "1.69.0"
pinned-nightly = "nightly-2023-05-25"

[features]
default = ["byteorder"]

alloc = []
simd = []
simd-nightly = ["simd"]
# This feature depends on all other features that work on the stable compiler.
# We make no stability guarantees about this feature; it may be modified or
# removed at any time.
__internal_use_only_features_that_work_on_stable = ["alloc", "simd"]

[dependencies]
zerocopy-derive = { version = "=0.7.0-alpha.4", path = "zerocopy-derive" }

[dependencies.byteorder]
version = "1.3"
default-features = false
optional = true

[dev-dependencies]
rand = "0.6"
rustversion = "1.0"
static_assertions = "1.1"
# Required for "and $N others" normalization
trybuild = ">=1.0.70"
