[workspace]
members = [".", "tools/doc_gen"]

[package]
name = "cargo-anneal"
edition = "2024"
version = "0.1.0-alpha.19"
description = "Formally verify that your safety comments are correct."
categories = [
  "development-tools::cargo-plugins",
  "development-tools::testing",
  "compilers",
  "mathematics",
  "security",
]
keywords = ["verification", "cargo", "plugin", "unsafe", "lean"]
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
repository = "https://github.com/google/zerocopy/tree/main/anneal"
publish = true

exclude = [".*", "testdata"]

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
dashmap = "6.1.0"
env_logger = "0.11.10"
log = "0.4.29"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = [
  "full",
  "visit",
  "extra-traits",
  "parsing",
  "printing",
] }
quote = "1.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
indicatif = { version = "0.18.4", features = ["improved_unicode"] }
console = "0.16.3"
sha2 = "0.10"
fs2 = "0.4"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
dirs = "6.0"
tar = "0.4"
flate2 = "1.1"
# The zstd crate is required to support decompression of the new unified archive
# format (.tar.zst) used for pre-built artifacts.
zstd = "0.13"

[build-dependencies]
toml = "0.8"

[dev-dependencies]
syn = { version = "2.0.117", features = [
  "printing",
  "full",
  "visit",
  "extra-traits",
  "parsing",
] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
ui_test = "0.30.4"
assert_cmd = "2.2.0"
tempfile = "3.27.0"
predicates = "3.1.4"
tiny_http = "0.12"
datatest-stable = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.0"
strip-ansi-escapes = "0.2.1"
similar = "2.7.0"

[package.metadata.build_rs]

# The commit hash of the Aeneas repository to use.
#
# FIXME: Add a CI step to verify that this commit exists and matches the
# toolchain version.
aeneas_rev = "fbdeab52de993f2bad6b650acd6aa8353d9edc89"

# The Lean toolchain version to use. This must match the version of Lean used
# by Aeneas in the `lean-toolchain` file in the commit above.
lean_toolchain = "leanprover/lean4:v4.28.0-rc1"

# The Rust toolchain required by Charon.
#
# FIXME(#3165):
# - Roll this from `tools/roll-pinned-prebuilts.py`
# - Auto-install via `rustup` during `cargo anneal setup`
charon_rust_toolchain = "nightly-2026-02-07"
charon_version = "0.1.0-dummy"

[package.metadata.anneal.dependencies.aeneas]
# The per-commit release tag from AeneasVerif/charon
tag = "build-2026.04.18.190229-fbdeab52de993f2bad6b650acd6aa8353d9edc89"

[package.metadata.anneal.dependencies.aeneas.checksums]
linux-aarch64 = "f285291f9412aa8068131545e18280fcb45803a9da1141e1698e8bf0efe63b38"
linux-x86_64 = "70e89c218d76ed584bac1685c0390ce18ea9cb769e6e0cb756afe40795974a11"
macos-aarch64 = "c87e1fc6db25345865fb9e841fc79f06c13c7811faa9ce0cfa0019ea18fc531b"
macos-x86_64 = "c4a1f78ae509f9b3da962809e5ce8a0ac52d95e9b71927dd707019bc03a5de16"

[[test]]
name = "integration"
harness = false
