# Copyright 2023 The Fuchsia Authors
#
# Licensed under a BSD-style license <LICENSE-BSD>, Apache License, Version 2.0
# <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0>, or the MIT
# license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your option.
# This file may not be copied, modified, or distributed except according to
# those terms.

[package]
name = "testutil"
version = "0.0.0"
edition = "2018"

[dependencies]
cargo_metadata = "0.18.0"
# Pin to 0.1.5 because more recent versions require a Rust version more recent
# than our MSRV.
cargo-platform = "=0.1.5"
rustc_version = "0.4.0"
# Pin to 0.3.0 because more recent versions require a Rust version more recent
# than our MSRV.
time = { version = "=0.3.0", default-features = false, features = ["formatting", "macros", "parsing"] }
toml = "0.5.11"
