# Copyright 2023 The Fuchsia Authors
#
# Licensed under a BSD-style license <LICENSE-BSD>, Apache License, Version 2.0
# <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0>, or the MIT
# license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your option.
# This file may not be copied, modified, or distributed except according to
# those terms.

[package]
name = "testutil"
version = "0.0.0"
edition = "2018"

[dependencies]
# Pin to 0.4.11 because more recent versions require a Rust version more recent
# than our MSRV.
lock_api = "=0.4.11"
# Pin to 2.5.0 because more recent versions require a Rust version more recent
# than our MSRV.
memchr = "=2.5.0"
parking_lot = "=0.12.1"
# Pin to 0.9.10 because more recent versions require a Rust version more recent
# than our MSRV.
parking_lot_core = "=0.9.10"
# Pin to 0.1.8 because 0.1.9 takes a dependency on windows-sys 0.59.0, which
# in turn requires a Rust version more recent than our MSRV. By contrast,
# 0.1.8 depends on windows-sys 0.52.0, which works with our MSRV.
winapi-util = "=0.1.8"
cargo_metadata = "=0.18.1"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = [
    'cfg(__ZEROCOPY_INTERNAL_USE_ONLY_DEV_MODE)',
    'cfg(__ZEROCOPY_INTERNAL_USE_ONLY_TOOLCHAIN, values("msrv", "stable", "nightly"))',
] }
