# Copyright 2018 The Fuchsia Authors
#
# Licensed under a BSD-style license <LICENSE-BSD>, Apache License, Version 2.0
# <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0>, or the MIT
# license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your option.
# This file may not be copied, modified, or distributed except according to
# those terms.

[workspace]
members = [
    "cargo-zerocopy",
    "generate-readme",
    "hermes",
    "ui-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
publish = false

[workspace.dependencies]
regex = "1"
toml = "0.8"
