# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_macro.gni")
import("//build/rust/rustc_test.gni")

rustc_macro("zerocopy-derive") {
  version = "0.1.0"
  edition = "2018"

  deps = [
    "//third_party/rust_crates:proc-macro2",
    "//third_party/rust_crates:syn",
    "//third_party/rust_crates:synstructure",
  ]

  sources = [
    "src/ext.rs",
    "src/lib.rs",
    "src/repr.rs",
  ]
}

group("tests") {
  testonly = true
  deps = [ ":zerocopy-derive-test($host_toolchain)" ]
}

if (is_host) {
  rustc_test("zerocopy-derive-test") {
    version = "0.1.0"
    edition = "2018"

    deps = [
      "//third_party/rust_crates:proc-macro2",
      "//third_party/rust_crates:syn",
      "//third_party/rust_crates:synstructure",
    ]

    sources = [
      "src/ext.rs",
      "src/lib.rs",
      "src/repr.rs",
    ]
  }
}
