# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file is used when publishing to crates.io

[package]
edition = "2018"
name = "zerocopy-derive"
version = "0.1.4"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Custom derive for traits from the zerocopy crate"
license = "BSD-3-Clause"
repository = "https://fuchsia.googlesource.com/fuchsia/+/master/src/lib/zerocopy/zerocopy-derive"

include = ["src/*", "tests/*", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.1"
syn = "1.0.5"
synstructure = "0.12.1"

[dev-dependencies]
zerocopy = { path = "../" }
compiletest_rs = "=0.3.22"
